syntax = "proto3";
package user;
import "task.proto";

message User {
int32 id = 1;
string name = 2;
string age= 3;
string email=4;
int32 tasks_id = 5;
string password=6;
int32 role=7;

}
message AuthUserRequest{
    string email=1;
    string password=2;
}
message AuthUserResponse{
    User user=1;
    string token=2;
}

message GetUserRequest {
int32 user_id = 1;
}

message GetUserResponse {
User user = 1;
}

message SearchUserRequest {
string query = 1;
}

message SearchUserResponse {
repeated User user = 1;
}

message CreateUserRequest {
  int32 user_id = 1;
  string name = 2;
  string age=3;
  string email=4;
  int32 tasks_id = 5;
  string password=78;
  int32 role=7;
}
message CreateUserResponse {
  User user = 1;
}
message DeleteUserRequest {
  int32 user_id = 1;
}

message DeleteUserResponse {
   User user = 1;
}
message UpdateUserRequest {
  int32 user_id = 1;
  string name = 2;
  string age = 3;
  string email = 4;
  int32 tasks_id=5;
}
message UpdateUserResponse {
   User user = 1;
}
message AddUserTaskRequest {
  int32 user_id = 1;
  int32 task_id = 2;
}

message AddUserTaskResponse {
  bool success = 1;
}

service UserService {
rpc AuthUser(AuthUserRequest) returns (AuthUserResponse);
rpc GetUser(GetUserRequest) returns (GetUserResponse);
rpc SearchUsers(SearchUserRequest) returns (SearchUserResponse);
rpc createUser(CreateUserRequest) returns (CreateUserResponse);
rpc updateUser(UpdateUserRequest) returns (UpdateUserResponse);
rpc deleteTask(DeleteUserRequest) returns (DeleteUserResponse);
rpc addUserTask(AddUserTaskRequest) returns (AddUserTaskResponse);

}